# Kaggle_FB3_ELL

./: CONTRIBUTING.md  README.md  feedback_learner_env.yaml  pyproject.toml
data/: submission.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
exp/: 000.Baseline.ipynb  001.LSTM_model.ipynb
rst/models/: baseline_model_cat.pkl
tests/: test_kaggle_fb3_ell.py
