[tool.poetry]
name = "kaggle_fb3_ell"
version = "0.1.0"
description = "This is the repository for Kaggle Competiton: Feedback3_English_Language_Learner Competition."
authors = ["Wenjia Zhu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
